--- a/views/conventions/index.hbs
+++ b/views/conventions/index.hbs
@@ -7,29 +7,34 @@
   <p class="about" style="width: 600px;">Maximize Your Geek by Planning Out Your Cons!</p>
 </header>
 
-<div class="ten-container">
-<h1 class="ten-header">Profile</h1>
-<div class="line"></div>
-  <div class="my-con">
-    <ul class="my-cons-list">
-      <h3 class="ten-list-header">Cons To-Go-To</h3>
-      <div class="mini-line"></div>
-      {{#each con}}
-        <li><a class="button cons-list" href="#popup{{this.id}}">{{this.name}}</a></li>
-
-        <div id="popup{{this.id}}" class="overlay" style="background:none;">
-          <div class="popup my-con-edit">
-            <a href="#">&times;</a>
+<main class="ten-container profile">
+  <h1 class="ten-header">Profile</h1>
+    <div class="line"></div>
+    <div class="my-con">
+      <ul class="my-cons-list">
+          <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=200&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=ht3jlfaac5lfd6263ulfh4tql8%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York" style="border:2px black solid; margin-top:25px;" width="200" height="150" frameborder="0" scrolling="no"></iframe>
+        <h3 class="ten-list-header">Cons To-Go-To</h3>
+          <div class="mini-line"></div>
+        {{#each con}}
+          {{!-- <input class="helper-trigger" type="checkbox" id="{{this.name}}" name="{{this.name}}"/>
+          
+          <div class="helper-show">
             <ul class="content">
               <li>{{this.name}}</li>
               <li>{{this.date}}</li>
               <li>{{this.location}}</li>
+              <li>{{this.description}}</li>
               <li><a href="{{this.url}}">Visit their Website</a></li>
             </ul>
+            
+
+            <label class="btn btn-link" for="{{this.name}}"> 
+              <u class="x">&times;</u>
+            </label>
 
             <form class="edit-form" action="/Conventions/{{this.id}}?_method=put" method="POST">
-                <h4>Edit?</h4>
-                <p>
+              <h4>Edit?</h4>
+              <p>
                 <label for="name">Name</label>
                 <input type="text" name="name" class="input">
                 <br/>
@@ -41,44 +46,89 @@
                 <br/>
                 <label for="url">URL</label>
                 <input type="text" name="url" class="input">
+                <br/>
+                <label for="description">Notes</textarea>
+                <input type="text" name="description" class="input">
               </p>
               <input type="submit" value="Update" class="buttons update">
             </form>
-
             <form action="/Conventions/{{this.id}}?_method=delete" method="POST">
               <input type="submit" value="Delete"  class="buttons delete">
             </form>
-
           </div>
-        </div>
-      {{/each}}
+
+          <label class="btn btn-default helper-hide" for="{{this.name}}">{{this.name}}</label> --}}
+
+          <li><a class="button cons-list" href="#popup{{this.id}}">{{this.name}}</a></li>
+
+          <section id="popup{{this.id}}" class="overlay" style="background:none;">
+            <div class="popup my-con-edit">
+              <a class="x" href="#">&times;</a>
+              <ul class="content">
+                <li><a href="{{this.url}}">{{this.name}}</a></li>
+                <li>{{this.date}}</li>
+                <li>{{this.location}}</li>
+              </ul>
+
+              <form class="edit-form" action="/Conventions/{{this.id}}?_method=put" method="POST">
+                  <h4>Edit</h4>
+                  <p>
+                  <label for="name">Name</label>
+                  <input type="text" name="name" class="input text-box">
+                  <br/>
+                  <label for="date">Date</label>
+                  <input type="text" name="date" class="input text-box">
+                  <br/>
+                  <label for="location">Location</label>
+                  <input type="text" name="location" class="input text-box">
+                  <br/>
+                  <label for="url">URL</label>
+                  <input type="text" name="url" class="input text-box">
+                  <br/>
+                  <label for="description">Notes</label>
+                  <input type="text" name="description" class="input text-box">
+                </p>
+                <input type="submit" value="Update" class="buttons update">
+              </form>
+
+              <form action="/Conventions/{{this.id}}?_method=delete" method="POST">
+                <input type="submit" value="Delete"  class="buttons delete">
+              </form>
+
+            </div>
+          </section>
+        {{/each}}
 
         <a class="add" href="#popup">Add A Con!</a>
+      </ul>
+    </div>
 
-    </ul>
-  </div>
-
-  <div id="popup" class="overlay">
-    <div class="popup">
-      <a class="close" href="index"></a>
-        <h1>Add in Your Convention</h1>
-        <form action="/Conventions" method="POST">
-          <p>
-            <label for="name">Name</label>
-            <input type="text" name="name" class="input">
-            <br/>
-            <label for="date">Date</label>
-            <input type="text" name="date" class="input">
-            <br/>
-            <label for="location">Location</label>
-            <input type="text" name="location" class="input">
-            <br/>
-            <label for="url">URL</label>
-            <input type="text" name="url" class="input">
-          </p>
-          <input type="submit" value="Create" class="buttons">
-        </form>
+    <div id="popup" class="overlay">
+      <div class="popup">
+        <a class="x" href="#">&times;</a>
+          <h1 class="content">Add A Con</h1>
+          <form action="/Conventions" method="POST">
+            <p>
+              <label for="name">Name</label>
+              <input type="text" name="name" class="input">
+              <br/>
+              <label for="date">Date</label>
+              <input type="text" name="date" class="input">
+              <br/>
+              <label for="location">Location</label>
+              <input type="text" name="location" class="input">
+              <br/>
+              <label for="url">URL</label>
+              <input type="text" name="url" class="input">
+            </p>
+            <input type="submit" value="Create" class="buttons">
+          </form>
+      </div>
     </div>
   </div>
-</div>
-</div>
+</main>
+
+
+
+
+
