--- a/views/index.hbs
+++ b/views/index.hbs
@@ -39,6 +39,10 @@
                 <li><span>Where:</span> {{this.location}}</li>
                 <li><a href="{{this.url}}">Visit their Website!</a></li>
               </ul>
+
+              {{!-- <form action="/conventions/index/{{this.id}}" method="POST">
+                <input type="submit" value="Fave" class="buttons">
+              </form> --}}
             </div>
           </div>
       {{/each}}
