--- a/views/index.hbs
+++ b/views/index.hbs
@@ -40,9 +40,9 @@
                 <li><a href="{{this.url}}">Visit their Website!</a></li>
               </ul>
 
-              {{!-- <form action="/conventions/index/{{this.id}}" method="POST">
+              <form action="/conventions/index/{{this.id}}" method="POST">
                 <input type="submit" value="Fave" class="buttons">
-              </form> --}}
+              </form>
             </div>
           </div>
       {{/each}}
