--- a/views/login.hbs
+++ b/views/login.hbs
@@ -17,12 +17,12 @@
 <form class="plus" method="post" action="/conventions/login">
   <div>
     <label for="email">Email</label>
-    <input class="join" type="text" name="email" id="email">
+    <input class="join" type="text" name="email" id="email" required>
   </div>
 
   <div>
     <label for="password">Password</label>
-    <input class="join pass" type="password" name="password" id="password">
+    <input class="join pass" type="password" name="password" id="password" required>
   </div>
 
   <input class="btn buttons" type="submit">
