fix text box for create new

--- a/views/conventions/index.hbs
+++ b/views/conventions/index.hbs
@@ -65,16 +65,16 @@
           <form action="/Conventions" method="POST">
             <p>
               <label for="name">Name</label>
-              <input type="text" name="name" class="input" required>
+              <input type="text" name="name" class="input text-box" required>
               <br/>
               <label for="date">Date</label>
-              <input type="text" name="date" class="input">
+              <input type="text" name="date" class="input text-box">
               <br/>
               <label for="location">Location</label>
-              <input type="text" name="location" class="input">
+              <input type="text" name="location" class="input text-box">
               <br/>
               <label for="url">URL</label>
-              <input type="text" name="url" class="input">
+              <input type="text" name="url" class="input text-box">
             </p>
             <input type="submit" value="Create" class="buttons">
           </form>
