--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,10 +15,10 @@
   <p class="about">Maximize Your Geek by Planning Out Your Cons!</p>
 </header>
 
-<div class="ten-container welcome">
+<div class="ten-container welcome" style="padding-bottom: 20px; background: rgb(53, 53, 53); color:white;">
   <section>
-    <h1 class="ten-header">Welcome to Con-A-Thon!</h1>
-    <div class="line"></div>
+    <h1 class="ten-header" style="background: rgb(53,53,53); color:white;">Welcome to Con-A-Thon!</h1>
+    <div class="line" style="background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 450, from(#F85B1A), to(#535353));"></div>
     <h4>No, this isn't for conning people. （•‿•）</h4>
     <p>This is a convention trip planning website. 
       We have a list of 30 popular anime, comic, and gaming conventions of 2018 around the USA
@@ -27,7 +27,7 @@
   </section>
 </div>
 
-<div class="ten-container">
+<div class="ten-container" style="padding-top: 0;">
   <h2 class="ten-header">Top Ten Conventions</h2>
   <div class="line"></div>
   <section class="ten">
