--- a/views/conventions/index.hbs
+++ b/views/conventions/index.hbs
@@ -42,7 +42,7 @@
                   <label for="url">URL</label>
                   <input type="text" value="{{this.url}}" name="url" class="input text-box">
                 </p>
-                <h4><button class="buttons" style="color:white;text-decoration:none;width:90px;height:25px;font-size:15px;" href="edit/{{this.id}}">Notes!</button></h4>
+                <h4><a class="buttons" style="color:white;text-decoration:none;width:90px;height:25px;font-size:15px;" href="edit/{{this.id}}">Notes!</a></h4>
                 <input type="submit" value="Update" class="buttons update">
               </form>
 
